Changed meta description and keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Lily Thimsen</title>
-  <meta name="description" content="This is the website of Daniel Brannon. He is an Associate Professor of Marketing at the University of Northern Colorado">
-  <meta name="keywords" content="daniel brannon, marketing, northern colorado, consumers, teaching, digital marketing" >
+  <meta name="description" content="This is the website of Lily Thimsen. She is a senior marketing student at the University of Northern Colorado">
+  <meta name="keywords" content="Lily Thimsen, marketing, northern colorado, consumers, senior marketing student, digital marketing" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon"> <!-- replaced original favicon with cat-->
