--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="cta-text"> These are snacks that I have found invaluable for your pantry selections. These snacks are sure to cure your hanger. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="blog.html">Click here to get the booklist</a>
+            <a class="cta-btn align-middle" href="blog.html">Click here to get the snack recommendation</a>
           </div>
         </div>
 
