--- a/about.html
+++ b/about.html
@@ -83,8 +83,8 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Research Interests</a></h4>
-              <p class="description">My research topics of interest include human-computer interaction, consumer financial decision-making, premium/luxury consumption. My work has been published in top business journals including Journal of Consumer Research, Journal of the Academy of Marketing Science, and Journal of Business Research. <a href = https://scholar.google.com/citations?user=rDQdoI0AAAAJ&hl=en> Check out my Google Scholar page!</a></p>
+              <h4 class="title"><a href="">Meet Lily</a></h4>
+              <p class="description">My interest include long walks on the beach, watching movies with my best friends, and taking naps. My best friend is Melina Faris and I have a teacup chihuahua names Bandit.</a></p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
