--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Meet Lily</a></h4>
-              <p class="description">My interest include long walks on the beach, watching movies with my best friends, and taking naps. My best friend is Melina Faris and I have a teacup chihuahua names Bandit.</a></p>
+              <p class="description">My interest include long walks on the beach, watching movies with my best friends, and taking naps. My best friend is Melina Faris and I have a teacup chihuahua named Bandit.</a></p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Teaching Interests</a></h4>
+              <h4 class="title"><a href="">School Interests</a></h4>
               <p class="description">Classes I have taught include Consumer Behavior, Marketing Research and Analysis, Web and Digital Ad Analytics, and Digital Advertising. My teaching philosophy is centered around providing students with both theory and hands-on experience in the latest marketing trends and technologies. I strive to provide a positive and supportive learning environment in the classroom. Relevant marketing technologies I teach include Google Analytics, Google Tag Manager, Google Data Studio, Google Search and Display Ads, Tableau, JASP, HTML/CSS, and Qualtrics.</p>
             </div>
 
