--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div id="logo">
-        <h1><a href="index.html">Daniel Brannon</a></h1> <!-- use this to place your name at the top left of the page -->
+        <h1><a href="index.html">Lily Thimsen</a></h1> <!-- use this to place your name at the top left of the page -->
       </div>
 
       <nav id="navbar" class="navbar">
@@ -70,7 +70,7 @@
 
     <!-- ======= Blog Section ======= -->
     <div class="header">
-      <h2>Daniel Brannon's Blog</h2>
+      <h2>Lily Thimsen's Blog</h2>
     </div>
     
     <div class="row">
