--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row" data-aos="zoom-in">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3 class="cta-title">Click Here Now to View My Top Recommended Snacks to Eat While you Study!</h3>
+            <h3 class="cta-title">Click Here Now to View My Top Recommended Snacks to Eat While Uou Study!</h3>
             <p class="cta-text"> These are snacks that I have found invaluable for your pantry selections. These snacks are sure to cure your hanger. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
