--- a/blog.html
+++ b/blog.html
@@ -78,19 +78,19 @@
         <div class="card">
           <h2>Top 5 Recommended Snacks To Eat While Studying</h2>
           <h5>The books give great consumer psychology insights and are relevant to practitioners,</h5>
-          <p style="font-size:25px"> 1. Contagious by Jonah Berger</p>
+          <p style="font-size:25px"> 1. Reeses Peanut Butter Cups</p>
           <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 2. Don't Make Me Think by Steve Krug</p>
+          <p style="font-size:25px"> 2. Popcorn</p>
           <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 3. Influence by Robert Cialdini</p>
+          <p style="font-size:25px"> 3. Carrots</p>
           <p><a href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/influence-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 4. Predictably Irrational by Dan Ariely</p>
+          <p style="font-size:25px"> 4. Gummy Bears</p>
           <p><a href="https://www.amazon.com/Predictably-Irrational-1-Exp-Rev/dp/B0076YEIFQ/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/irrational-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
-          <p style="font-size:25px"> 5. Nudge by Richard Thaler and Cass Sunstein</p>
+          <p style="font-size:25px"> 5. Veggie Straws</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
