--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
           <h5>The snacks are great for keeping your mind engaged in what you are studying</h5>
           <p style="font-size:25px"> 1. Reeses Peanut Butter Cups</p>
           <p><a href="https://www.amazon.com/Contagious-Things-Catch-Jonah-Berger/dp/1451686587">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/contagious-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://s7d2.scene7.com/is/image/hersheysassets/181112_REESES_STDCUP_SINGLE_BITE_280_LAYERED_FINAL?fmt=webp-alpha&hei=412&qlt=75" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 2. Popcorn</p>
           <p> <a href="https://www.amazon.com/Dont-Make-Think-Revisited-Usability/dp/0321965515/">
           <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/think-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
