--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
           <img src = "https://m.media-amazon.com/images/I/91745c3+LFL.jpg" class="blogimg" style="width:300px;height:300px;"></a></p>
           <p style="font-size:25px"> 5. Veggie Straws</p>
           <p><a href="https://www.amazon.com/Nudge-Final-Richard-H-Thaler/dp/014313700X/">
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/nudge-img.jpg?raw=true" class="blogimg" style="width:300px;height:300px;"></a></p>
+          <img src = "https://m.media-amazon.com/images/I/71ZSwO3bwRL.jpg" class="blogimg" style="width:300px;height:300px;"></a></p>
         </div>
       </div>
       <div class="rightcolumn">
