--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
       <div class="rightcolumn">
         <div class="card">
           <h2>About Me</h2>
-          <img src = "https://github.com/dcbranno/Regna/blob/master/assets/img/daniel-img.jpg?raw=true" class="blogimg" style="height:300px;">
+          <img src = "https://t4.ftcdn.net/jpg/01/36/70/67/360_F_136706734_KWhNBhLvY5XTlZVocpxFQK1FfKNOYbMj.jpg" class="blogimg" style="height:300px;">
           <p>I am a senior at the University of Northern Colorado.</p>
         </div>
         <div class="card">
