--- a/research1.html
+++ b/research1.html
@@ -73,9 +73,9 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3 class="section-title">Research Portfolio</h3>
-          <p class="section-description">Here is a journal article that I have written. Click to download!</p>
+          <p class="section-description">Here is a paper I have written on Google's HR department. Click to download!</p>
         </div>
-        <a href="https://github.com/dcbranno/Regna/raw/master/assets/img/portfolio/Maximizing%20and%20Saving.pdf" download>
+        <a href="https://docs.google.com/document/d/1jg7qUd9ZflQ0-Yfz96EhGI1kBJ30c-XCG9rESnbxvhI/edit?usp=sharing" download>
             <img src="assets/img/portfolio/PID-journal-img.JPG" alt="W3Schools">
         </a>
     </div>
