--- a/video.html
+++ b/video.html
@@ -77,7 +77,7 @@
           </div>
           <div class="container" data-aos="fade-up">
             <iframe width="420" height="315"
-            src="<iframe width="560" height="315" src="https://www.youtube.com/embed/lhXW8_7CaHM?si=DCqXs8C4QUGi6iq0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>">
+            src="<iframe width="560" height="315" src="https://www.youtube.com/embed/lhXW8_7CaHM?si=78Q4IA4e3zQbpi7-&amp;start=1" allowfullscreen></iframe>">
             </iframe>
           </div>
         </div>
