--- a/video.html
+++ b/video.html
@@ -72,8 +72,8 @@
       <section id="mx">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h3 class="section-title">Monfort College of Business</h3>
-            <p class="section-description">I go to the Monfort College of Business - University of Northern Colorado</p>
+            <h3 class="section-title">Burn That Ad</h3>
+            <p class="section-description">Here is a great example of a company taking advantage of technology to increase traffic and engagement!</p>
           </div>
           <div class="container" data-aos="fade-up">
             <iframe width="420" height="315"
