--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head> <!-- contents of the head element are not displayed on the page. Instead it contains metadata about the page -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XCVNKN3SJK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XCVNKN3SJK');
+</script>
   <title>Lily Thimsen</title>
   <meta name="description" content="This is the website of Lily Thimsen. She is a senior marketing student at the University of Northern Colorado">
   <meta name="keywords" content="Lily Thimsen, marketing, northern colorado, consumers, senior marketing student, digital marketing" >
