--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XCVNKN3SJK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-XCVNKN3SJK');
+</script>
   <title>Blog</title>
   <meta name="description" content="This page is my personal blog" >
   <meta name="keywords" content="Daniel Brannon, blog" >
