--- a/video.html
+++ b/video.html
@@ -13,9 +13,9 @@
 
   gtag('config', 'G-XCVNKN3SJK');
 </script>
-  <title>Blog</title>
-  <meta name="description" content="This page is my personal blog" >
-  <meta name="keywords" content="Lily Thimsen, blog" >
+  <title>Video</title>
+  <meta name="description" content="This page is a video" >
+  <meta name="keywords" content="Lily Thimsen, video" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
