--- a/research1.html
+++ b/research1.html
@@ -13,9 +13,9 @@
 
   gtag('config', 'G-XCVNKN3SJK');
 </script>
-  <title>Blog</title>
-  <meta name="description" content="This page is my personal blog" >
-  <meta name="keywords" content="Daniel Brannon, blog" >
+  <title>Research</title>
+  <meta name="description" content="This page is my research" >
+  <meta name="keywords" content="Daniel Brannon, research" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
