Blog to contact

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 
   gtag('config', 'G-XCVNKN3SJK');
 </script>
-  <title>Blog</title>
-  <meta name="description" content="This page is my personal blog" >
-  <meta name="keywords" content="Daniel Brannon, blog" >
+  <title>Contact</title>
+  <meta name="description" content="This page is my personal contact" >
+  <meta name="keywords" content="Lily Thimsen, contact" >
 
   <!-- Favicons -->
   <link href="assets/img/cat-favicon.png" rel="icon">
