--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
   gtag('config', 'G-XCVNKN3SJK');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NR6NP6ZX');</script>
+  <!-- End Google Tag Manager -->
   <title>Lily Thimsen</title>
   <meta name="description" content="This is the website of Lily Thimsen. She is a senior marketing student at the University of Northern Colorado">
   <meta name="keywords" content="Lily Thimsen, marketing, northern colorado, consumers, senior marketing student, digital marketing" >
