--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@
 <body>
 
 <div class="container">
-    <h1>Refer a Friend</h1>
+    <h1>Refer a Friend, Get $5</h1>
 
     <form id="referForm">
         <label for="yourName">Your Name:</label>
