--- a/blog.html
+++ b/blog.html
@@ -150,8 +150,8 @@
 <body>
 
 <div class="container">
-    <h1>Refer a Friend, Get $5</h1>
-
+    <h1>Refer a Friend!</h1>
+<h2>Have a friend write a review and recieve $5</h2>
     <form id="referForm">
         <label for="yourName">Your Name:</label>
         <input type="text" id="yourName" placeholder="Your Name" required>
